--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.codehaus.plexus</groupId>
     <artifactId>plexus</artifactId>
-    <version>5.1</version>
+    <version>6.5</version>
   </parent>
 
   <artifactId>plexus-containers</artifactId>
-  <version>2.1.0</version>
+  <version>2.1.1</version>
   <packaging>pom</packaging>
 
   <name>Plexus Containers</name>
@@ -25,9 +25,9 @@
 
   <scm>
     <connection>scm:git:https://github.com/codehaus-plexus/plexus-containers.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/codehaus-plexus/plexus-containers.git</developerConnection>
+    <developerConnection>scm:git:https://github.com/codehaus-plexus/plexus-containers.git</developerConnection>
     <url>https://github.com/codehaus-plexus/plexus-containers</url>
-    <tag>plexus-containers-2.1.0</tag>
+    <tag>plexus-containers-2.1.1</tag>
   </scm>
   <issueManagement>
     <system>github</system>
@@ -45,8 +45,9 @@
     <classWorldsVersion>2.6.0</classWorldsVersion>
     <plexusUtilsVersion>3.1.1</plexusUtilsVersion>
     <xbeanReflectVersion>3.7</xbeanReflectVersion>
+    <mavenVersion>3.2.5</mavenVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <javaVersion>6</javaVersion>
+    <javaVersion>7</javaVersion>
   </properties>
 
   <dependencyManagement>
@@ -84,38 +85,32 @@
       <dependency>
         <groupId>com.thoughtworks.qdox</groupId>
         <artifactId>qdox</artifactId>
-        <version>2.0-M10</version>
+        <version>2.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.jdom</groupId>
         <artifactId>jdom2</artifactId>
-        <version>2.0.6</version>
+        <version>2.0.6.1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
-        <version>3.0</version>
+        <version>${mavenVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-model</artifactId>
-        <version>3.0</version>
+        <version>${mavenVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-core</artifactId>
-        <version>3.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.collections</groupId>
-        <artifactId>google-collections</artifactId>
-        <version>1.0</version>
+        <version>${mavenVersion}</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
-        <scope>provided</scope>
+        <version>4.13.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -124,12 +119,46 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <check>false</check>
+            <skip>true</skip>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>3.1.2</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>3.1.2</version>
+          <dependencies>
+            <dependency>
+              <groupId>com.puppycrawl.tools</groupId>
+              <artifactId>checkstyle</artifactId>
+              <version>9.2</version>
+            </dependency>
+            <dependency>
+              <groupId>org.apache.maven.shared</groupId>
+              <artifactId>maven-shared-resources</artifactId>
+              <version>4</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
